Add COM Initialization to TestBrowserThread and TestBrowserThreadBundle

BrowserProcessSubThread initializes COM, so TestBrowserThread and
TestBrowserThreadBundle should too.

BUG=734135

Change-Id: I8cd0f1422bd4e680372c542f79dc9763879433ec
Reviewed-on: https://chromium-review.googlesource.com/540100
Reviewed-by: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481908}
Former-commit-id: 0bde45e4ced6daf620f669e0987f390a2a8846f2