content/public/test/test_browser_thread.cc
@@ -6,10 +6,16 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/test/test_browser_thread.h"
 
 #include "base/macros.h"
+#include "base/memory/ptr_util.h"
 #include "base/message_loop/message_loop.h"
 #include "base/threading/thread.h"
+#include "build/build_config.h"
 #include "content/browser/browser_thread_impl.h"
 #include "content/browser/notification_service_impl.h"
+
+#if defined(OS_WIN)
+#include "base/win/scoped_com_initializer.h"
+#endif
 
 namespace content {
 
@@ -25,16 +31,27 @@ class TestBrowserThreadImpl : public BrowserThreadImpl {
   ~TestBrowserThreadImpl() override { Stop(); }
 
   void Init() override {
-    notification_service_.reset(new NotificationServiceImpl);
+#if defined(OS_WIN)
+    com_initializer_ = base::MakeUnique<base::win::ScopedCOMInitializer>();
+#endif
+
+    notification_service_ = base::MakeUnique<NotificationServiceImpl>();
     BrowserThreadImpl::Init();
   }
 
   void CleanUp() override {
-    notification_service_.reset();
     BrowserThreadImpl::CleanUp();
+    notification_service_.reset();
+#if defined(OS_WIN)
+    com_initializer_.reset();
+#endif
   }
 
  private:
+#if defined(OS_WIN)
+  std::unique_ptr<base::win::ScopedCOMInitializer> com_initializer_;
+#endif
+
   std::unique_ptr<NotificationService> notification_service_;
 
   DISALLOW_COPY_AND_ASSIGN(TestBrowserThreadImpl);
